@@ -72,6 +72,7 @@ int             navbar_search_aliases = TRUE;
 
 int		ack_no_sticky  = FALSE;
 int		ack_no_send    = FALSE;
+int		tac_cgi_hard_only = FALSE;
 
 time_t          this_scheduled_log_rotation = 0L;
 time_t          last_scheduled_log_rotation = 0L;
@@ -447,6 +448,8 @@ int read_cgi_config_file(const char *filename) {
 			ack_no_sticky = (atoi(val) > 0) ? TRUE : FALSE;
 		else if(!strcmp(var, "ack_no_send"))
 			ack_no_send = (atoi(val) > 0) ? TRUE : FALSE;
+		else if(!strcmp(var, "tac_cgi_hard_only"))
+			tac_cgi_hard_only = (atoi(val) > 0) ? TRUE : FALSE;
 		}
 
 	for(p = illegal_output_chars; p && *p; p++)
