@@ -51,6 +51,7 @@ extern char   url_stylesheets_path[MAX_FILENAME_LENGTH];
 extern char   url_media_path[MAX_FILENAME_LENGTH];
 
 extern int    refresh_rate;
+extern int    tac_cgi_hard_only;
 
 extern char *service_critical_sound;
 extern char *service_warning_sound;
@@ -430,8 +431,10 @@ void analyze_status_data(void) {
 				services_warning_disabled++;
 				problem = FALSE;
 				}
-			if(problem == TRUE)
-				services_warning_unacknowledged++;
+			if(problem == TRUE) {
+				if (temp_servicestatus->state_type == HARD_STATE || tac_cgi_hard_only == FALSE)
+					services_warning_unacknowledged++;
+			}
 			services_warning++;
 			}
 
@@ -453,8 +456,10 @@ void analyze_status_data(void) {
 				services_unknown_disabled++;
 				problem = FALSE;
 				}
-			if(problem == TRUE)
-				services_unknown_unacknowledged++;
+			if(problem == TRUE) {
+				if (temp_servicestatus->state_type == HARD_STATE || tac_cgi_hard_only == FALSE)
+					services_unknown_unacknowledged++;
+				}
 			services_unknown++;
 			}
 
@@ -476,8 +481,10 @@ void analyze_status_data(void) {
 				services_critical_disabled++;
 				problem = FALSE;
 				}
-			if(problem == TRUE)
-				services_critical_unacknowledged++;
+			if(problem == TRUE) {
+				if (temp_servicestatus->state_type == HARD_STATE || tac_cgi_hard_only == FALSE)
+					services_critical_unacknowledged++;
+				}
 			services_critical++;
 			}
 
@@ -584,8 +591,10 @@ void analyze_status_data(void) {
 				hosts_down_disabled++;
 				problem = FALSE;
 				}
-			if(problem == TRUE)
-				hosts_down_unacknowledged++;
+			if(problem == TRUE) {
+				if (temp_hoststatus->state_type == HARD_STATE || tac_cgi_hard_only == FALSE)
+					hosts_down_unacknowledged++;
+				}
 			hosts_down++;
 			}
 
@@ -602,8 +611,10 @@ void analyze_status_data(void) {
 				hosts_unreachable_disabled++;
 				problem = FALSE;
 				}
-			if(problem == TRUE)
-				hosts_unreachable_unacknowledged++;
+			if(problem == TRUE) {
+				if (temp_hoststatus->state_type == HARD_STATE || tac_cgi_hard_only == FALSE)
+					hosts_unreachable_unacknowledged++;
+			}
 			hosts_unreachable++;
 			}
 
