@@ -16,8 +16,10 @@ FIXES
 * configure does not error if no perl installed on CentOS 7 (John Frickson)
 * failed passive requests leave .ok files in checkresults dir (caronc)
 * Services don't show in status.cgi if "noheader" specified (John Frickson)
+* Standardized check interval config file names (John Frickson)
 
 ENHANCEMENTS
+* Added new flag to cgi.cfg: tac_cgi_hard_only to show only HARD states (john Frickson)
 
 
 4.2.4 - 2016-12-07
